{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 265,
  "lineage": "b9e14213-3f53-2caa-8eea-d290c6e6a445",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b88788c5a6775f3",
            "association_id": "eipassoc-00d939f2aeb371851",
            "domain": "vpc",
            "id": "eipalloc-05b88788c5a6775f3",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0c42b23f6f35a8764",
            "private_dns": "ip-10-0-1-109.ap-south-1.compute.internal",
            "private_ip": "10.0.1.109",
            "public_dns": "ec2-13-200-213-143.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.213.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "hddevops-01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:059941826920:instance/i-0d695112b3b7f7a2a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d695112b3b7f7a2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e3cecd9665bd45d",
            "private_dns": "ip-10-0-2-82.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02527b126127870f3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e4750978d38dfb9",
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private-ec2",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private-ec2",
              "Project": "hddevops-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031535ad72938de17"
            ]
          },
          "dependencies": [
            "aws_security_group.private_ssh_sg",
            "aws_subnet.private1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_24_04",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d26659fd82cf299",
            "arn": "arn:aws:ec2:ap-south-1:059941826920:instance/i-05ae23170de1659bb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ae23170de1659bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d9ab5d58a3d4965",
            "private_dns": "ip-10-0-1-125.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-65-2-184-110.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.184.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06e2e476e3f8d6ec0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0467b65d03873b831",
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public-ec2",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public-ec2",
              "Project": "hddevops-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6255c5e04ab0e45"
            ]
          },
          "dependencies": [
            "aws_security_group.public_ssh_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_24_04",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059941826920:internet-gateway/igw-05819be3e98f803b2",
            "id": "igw-05819be3e98f803b2",
            "owner_id": "059941826920",
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-main",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-main",
              "Project": "hddevops-01"
            },
            "vpc_id": "vpc-0098d6fdaed9a5b92"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b88788c5a6775f3",
            "association_id": "eipassoc-00d939f2aeb371851",
            "connectivity_type": "public",
            "id": "nat-04ce622924951702b",
            "network_interface_id": "eni-0c42b23f6f35a8764",
            "private_ip": "10.0.1.109",
            "public_ip": "13.200.213.143",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0467b65d03873b831",
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public-a",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public-a",
              "Project": "hddevops-01"
            }
          },
          "dependencies": [
            "aws_eip.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-internet_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c8a8e4e08d7d3fce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04ce622924951702b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c8a8e4e08d7d3fce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.public",
            "aws_nat_gateway.public",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05819be3e98f803b2",
            "id": "r-rtb-0f58ae4bc620451581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f58ae4bc62045158",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059941826920:route-table/rtb-0c8a8e4e08d7d3fce",
            "id": "rtb-0c8a8e4e08d7d3fce",
            "owner_id": "059941826920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04ce622924951702b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "hddevops-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0098d6fdaed9a5b92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059941826920:route-table/rtb-0f58ae4bc62045158",
            "id": "rtb-0f58ae4bc62045158",
            "owner_id": "059941826920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05819be3e98f803b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "hddevops-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0098d6fdaed9a5b92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fbbc05334f2f22a",
            "route_table_id": "rtb-0c8a8e4e08d7d3fce",
            "subnet_id": "subnet-01e4750978d38dfb9"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064242f688e06e67e",
            "route_table_id": "rtb-0c8a8e4e08d7d3fce",
            "subnet_id": "subnet-07efc33d0d2e78ab1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0499463078463a043",
            "route_table_id": "rtb-0f58ae4bc62045158",
            "subnet_id": "subnet-0467b65d03873b831"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059941826920:security-group/sg-0cc1c5c529b2e89af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc1c5c529b2e89af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20251006190016178700000002",
            "name_prefix": "terraform-",
            "owner_id": "059941826920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-ec2-sg",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-ec2-sg",
              "Project": "hddevops-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0098d6fdaed9a5b92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059941826920:security-group/sg-031535ad72938de17",
            "description": "allow ssh to private ec2",
            "egress": [],
            "id": "sg-031535ad72938de17",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "main-private-ssh-access",
            "name_prefix": "",
            "owner_id": "059941826920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Project": "hddevops-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0098d6fdaed9a5b92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059941826920:security-group/sg-0a6255c5e04ab0e45",
            "description": "allow ssh to public ec2",
            "egress": [],
            "id": "sg-0a6255c5e04ab0e45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "main-public-ssh-access",
            "name_prefix": "",
            "owner_id": "059941826920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Project": "hddevops-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0098d6fdaed9a5b92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059941826920:security-group/sg-0437da15372421160",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0437da15372421160",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20251006190018389400000003",
            "name_prefix": "terraform-",
            "owner_id": "059941826920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-rds-sg",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-rds-sg",
              "Project": "hddevops-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0098d6fdaed9a5b92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059941826920:subnet/subnet-01e4750978d38dfb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e4750978d38dfb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059941826920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private1",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private1",
              "Project": "hddevops-01"
            },
            "vpc_id": "vpc-0098d6fdaed9a5b92"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059941826920:subnet/subnet-07efc33d0d2e78ab1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07efc33d0d2e78ab1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059941826920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private2",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private2",
              "Project": "hddevops-01"
            },
            "vpc_id": "vpc-0098d6fdaed9a5b92"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059941826920:subnet/subnet-0467b65d03873b831",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0467b65d03873b831",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "059941826920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "hddevops-01"
            },
            "vpc_id": "vpc-0098d6fdaed9a5b92"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059941826920:vpc/vpc-0098d6fdaed9a5b92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f07f3ec6f70578a",
            "default_route_table_id": "rtb-06a6e4df0f5e62730",
            "default_security_group_id": "sg-08dd1f07d8dd171d7",
            "dhcp_options_id": "dopt-0fb1451513713d068",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0098d6fdaed9a5b92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a6e4df0f5e62730",
            "owner_id": "059941826920",
            "tags": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-vpc",
              "Project": "hddevops-01"
            },
            "tags_all": {
              "Contact": "desalehemant87@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-vpc",
              "Project": "hddevops-01"
            }
          }
        }
      ]
    }
  ]
}